# python-sample-project

./: LICENSE  Makefile  pyproject.toml
notebooks/: add_path.py  sample.ipynb
sample_project/: sample.py
tests/: test_sample.py
