[tool.poetry]
name = "python-sample-project"
version = "0.1.0"
description = "Python sample project"
authors = ["aiyogi01"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pylint = "^2.6.0"
pytype = "^2021.1.28"
jupyter = "^1.0.0"
nbstripout = "^0.3.9"

[tool.pytest.ini_options]
addopts = "--cov-fail-under=100"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
